centered text in footer

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
     </main>
 
     <!-- This is the footer -->
-    <footer class="bg-dark text-light p-2">Created and Powered with JavaScript and Bootstrap &copy 2023</footer>
+    <footer class="bg-dark text-light p-2 text-center">Created and Powered with JavaScript and Bootstrap &copy 2023</footer>
 
     <!-- Scripts -->
 
